--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,8 @@
 version: '3'
 
 services:
-  ws-mjpeg-relay:
-    container_name: ws-mjpeg-relay
-    build:
-      context: .
-      dockerfile: Dockerfile
+  mjpeg-relay:
+    build: .
     ports:
       - "10000:10000"
     environment:
@@ -13,7 +10,4 @@ services:
       - HOST_IP=172.27.65.25
       - PORT=10000
       - RECONNECT_INTERVAL=5000
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'  # Limit to 50% of CPU
+    restart: unless-stopped
