Optimize WebSocket handling and reduce CPU usage: - Add frame rate limiting (MAX_FPS=30) - Implement frame dropping mechanism - Optimize WebSocket operations (disable compression, parallel sending) - Reduce logging frequency - Add performance monitoring - Fix source WebSocket disconnection when no clients

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       - HOST_IP=172.27.65.25
       - PORT=10000
       - RECONNECT_INTERVAL=5000
+      - MAX_FPS=30
     restart: unless-stopped
